# miur-backend

./: .gitignore  README.md  alwaysvalidatev2.plutus  config.json  deadline.plutus  deadline2.plutus  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  requirements.txt  v1-requirements.txt
.github/workflows/: dev.yml  main.yml
docker/: api.Dockerfile  flask.Dockerfile  nginx.Dockerfile  pg.Dockerfile  setup_db.sh
integration-test/: run_tests.sh
integration-test/test/: base.py  test_certificate.py  test_min_utxo.py  test_mint.py  test_plutus.py
keys/: generate.sh
keys/fallback/: payment.addr  payment.pkh  payment.skey  payment.vkey
keys/mediator/: payment.addr  payment.pkh  payment.skey  payment.vkey
migrations/: 2022_02_14_b7df8398e4.sql  2023_03_23.sql  2023_04_08.sql
script/: v10.plutus  v12.plutus  v13.plutus  v4.plutus  v5.plutus  v6.plutus  v8.plutus
src/: app.py  nginx.conf  uwsgi.ini
src/api/: health.py  openapi-spec.yml  prod_user.py  projects.py  quiz.py  transaction.py  user.py
src/athena_providers/: mock.py
src/lib/: __init__.py  api_tools.py  auth_tools.py  cardano_tools.py  cardano_types.py  config.py  script_tools.py
src/model/: __init__.py  attempt_answer.py  deliverable.py  fund.py  funding.py  judge.py  judge_project_association.py  powerup.py  prod_user.py  project.py  project_mediator_association.py  project_state.py  project_subject_association.py  quiz.py  quiz_assignment.py  review.py  subject.py  submission.py  user.py
src/script/: v1.plutus  v2.plutus  v3.plutus  v7.plutus  v9.plutus
src/utils/: populate_quiz.py  (+7 more)
(+31 files in other folders)
